# mp-package

./: .gitignore  README.md  pyproject.toml  requirements.txt
0=local/: create_frames.py  create_video.py  marchenko_pastur.py  ratio.webm
matrix_utils/: calculations.py
mp_package/: gen_histogram.py  gen_theory.py  marchenko_pastur.py  testowe.py
tests/: test_calculations.py  to_nie_test.py
