[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mp-package"
version = "0.1.0"
description = "Python package for random matrix computations"
authors = [
    { name = "Przemysław Ryś", email = "przemek12413@gmail.com" }
]
requires-python = ">=3.13"
license = { text = "MIT" }
readme = "README.md"

# -----------------------------
# Zależności projektu
# -----------------------------
dependencies = [
    "llvmlite==0.45.1",
    "numba==0.62.1",
    "numpy==2.3.4"
]

# -----------------------------
# Zależności developerskie (opcjonalnie)
# -----------------------------
[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "iniconfig==2.3.0",
    "packaging==25.0",
    "pluggy==1.6.0",
    "Pygments==2.19.2"
]

# -----------------------------
# Pakiety do uwzględnienia w buildzie
# -----------------------------
[tool.setuptools.packages.find]
where = ["matrix_utils"]